--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "testcafe firefox sample.tests.js -e"
+    "test": "testcafe firefox test/sample.tests.js -e"
   },
   "author": "",
   "license": "ISC",
