--- a/package.json
+++ b/package.json
@@ -1,13 +1,19 @@
 {
-  "name": "spicy-sections-ui-automation",
-  "version": "1.0.0",
-  "description": "",
+  "name": "spicy-sections",
+  "version": "0.9.0",
+  "description": "A custom element that allows authors to employ tabs, accordions and summary+detail like UI affordances via CSS over otherwise good semantic content",
   "main": "index.js",
   "scripts": {
     "test": "testcafe firefox test/sample.tests.js -e"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "Brian Kardell <bkardell@igalia.com>",
+  "contributors": [
+    "Jonathan Neal",
+    "Dave Rupert",
+    "Miriam Suzanne",
+    "Hidde de Vries"
+  ],
+  "license": "W3C",
   "dependencies": {
     "testcafe": "^1.17.0"
   }
