--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "A custom element that allows authors to employ tabs, accordions and summary+detail like UI affordances via CSS over otherwise good semantic content",
   "main": "index.js",
   "scripts": {
-    "docs": "serve docs",
-    "start": "serve src",
+    "build": "tsc",
+    "build:watch": "tsc --watch",
+    "start": "serve docs",
     "test": "testcafe \"firefox:headless\" test/*.tests.js -e"
   },
   "author": "Brian Kardell <bkardell@igalia.com>",
@@ -18,13 +19,15 @@
   "license": "W3C",
   "devDependencies": {
     "serve": "^13.0.2",
-    "testcafe": "^1.17.0"
+    "testcafe": "^1.17.0",
+    "typescript": "^4.6.2"
   },
   "prettier": {
     "overrides": [
       {
         "files": [
-          "*.js"
+          "*.js",
+          "*.ts"
         ],
         "options": {
           "quoteProps": "consistent",
