--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build:watch": "tsc --watch",
     "start": "serve docs",
     "test": "npm run build && npm run test:cafe",
-    "test:cafe": "testcafe firefox:headless --app \"serve docs\" test/general.tests.js --skip-js-errors"
+    "test:cafe": "testcafe firefox:headless --app \"serve docs\" test/general.tests.ts --skip-js-errors"
   },
   "author": "Brian Kardell <bkardell@igalia.com>",
   "contributors": [
